style.css
@font-face 
{
    font-family: Avenir;
    src: url(“/QwkPass/fonts/AvenirNext.otf”) format(“opentype”);
}

body {
	font-family: 'Avenir', serif;
	margin:0;
	padding:0;
	font-size: 20px;
	font-weight: 400;
}

.nav {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 99;
    background-color:dodgerblue;
    overflow: hidden;
    text-align: center;
    height: 110px;
}

.nav a {
	font-family: 'Avenir', serif;
	float: center;
	color: floralwhite;
	padding-right: 100px;
	text-decoration: none;
	align-self: center;
}
.nav_text{
	font-weight: bold;   
    align-items: center;
    font-family: 'Avenir', serif;
}


.nav li {
    display:inline;
    
}

.hero {
	background-image: url("images/back.jpg");
	height: 50%;
	background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;	
	padding-top: 300px;
	padding-bottom: 300px;
}

.features{
	background-color: aliceblue;
	padding-top: 30px;
	padding-left: 20px;
	padding-right: 50px;
	padding-bottom: 50px;
}
#features-intro{
	text-align: justify;
	font-style: oblique;
	margin-right: 150px;
	margin-left: 150px;
	color: #FFFFFF;
	font-size: 18px;
}

.body_imgs{
    float: center;
    box-shadow: 0px 0px 55px 6px dodgerblue;
}

#features-bullets{
text-align: center;
height:auto;
margin-top: 30px;
color: #888B8D;
}

.smoothScroll {
  text-decoration: none;
  font-family: Segoe UI;
}

.how{
	background-color: #C6DEFF;
	padding-top: 50px;
	padding-left: 20px;
	padding-right: 50px;
	padding-bottom: 150px;
}

#how_content{
    height: auto;
    display: block;
    padding-top: 80px;
    text-align: center;
}

#steps{
    text-align: left;
    color: #888B8D;
}

#steps b{
    font-size: 30px;
    
}

#step1img{
	float: left;
	padding-left: 10%;
}
.pricing{
	background-color: aliceblue;
	padding-top: 30px;
	padding-left: 20px;
	padding-right: 50px;
	padding-bottom: 50px;
	text-align: center;
}

.setup{
	background-color: #C6DEFF;
	padding-top: 30px;
	padding-left: 20px;
	padding-right: 50px;
	padding-bottom: 150px;
	text-align: center;
}

.container {
	padding-top: 50px;
	text-align: center;
}

.footer{
    background-color: dodgerblue;
    color: floralwhite;
    padding-top: 30px;
    padding-left: 20px;
    padding-right: 50px;
    padding-bottom: 50px; 
}

#foothead{
    display: inline-block;
    padding-right: 40px;
}
#logo {
    max-width: 100%;
    display: inline-block;
    float: center;
    padding-left: 50px;
}

#fsteps {
    color: #888B8D;
}

